fixed some random jumpiness on focusing widget in FF

--- a/src/new-theme/default.scss
+++ b/src/new-theme/default.scss
@@ -43,7 +43,7 @@ form { padding: 0; margin: 0; }
   display: none;                /* XXX: why didn't we have this before? */
 }
 
-.DYNARCH-FAKE-FOCUS { z-index: -10000; position: absolute; left: -2000px; top: 0; }
+.DYNARCH-FAKE-FOCUS { z-index: -10000; position: fixed; left: -100px; top: 0; opacity: 0; }
 
 .CURSOR-DRAGGING   { cursor: move !important; }
 .CURSOR-RESIZE-E   { cursor: e-resize !important; }
